--- a/asobi/gengo.html
+++ b/asobi/gengo.html
@@ -2,14 +2,15 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>ろくまる農園</title>
-        </head>
-        <body>
+        <title> くるまる農園</title>
+    </head>
+<body>
 
-<form method="post" action="gengo.php">
-    西暦を入れてください<br />
-    <input type="text" name="seireki"><br />
-    <input type="submit" value="OK">
+    <form method = "post" action = "gengo.php"> 
+    西暦を入力してください<br/>
+    <input type = "text" name = "seireki"><br/>
+    <input type = "submit" value = "OK">
     </form>
 
-        </body>
+</body>
+</html>
