--- a/asobi/shun.html
+++ b/asobi/shun.html
@@ -2,13 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>ろくまる農園</title>
-        </head>
-        <body>
+        <title> くるまる農園</title>
+    </head>
+<body>
 
-<form method="post" action="shun.php">
-    <input type="text" name="tsuki"><br />
-    <input type="submit" value="OK">
+    <form method = "post" action = "shun.php"> 
+    <input type = "text" name = "tsuki"><br/>
+    <input type = "submit" value = "OK">
     </form>
 
-        </body>
+</body>
+</html>
